# programming-projects

./: README.md
School-projects/year-1/2p-bomb-game/: Bomberman.py  README.md
School-projects/year-1/2p-bomb-game/mapy/: mapa_1.txt  mapa_2.txt  mapa_5.txt  mapa_6.txt
School-projects/year-1/mice-puzzle-game/: README.md.md
School-projects/year-2/3D-shooter/: README.md  ReadMe.txt
School-projects/year-2/3D-shooter/docs/: deprecated-list.html  element-list  help-doc.html  member-search-index.js  overview-summary.html  (+3 more)
School-projects/year-2/associative-array/: AssociativeArray.h  DynamicArray.h  README.md  ReadJSON.cpp  testAssociativeArray.cpp  testDynamicArray.cpp  testReadJSON.cpp  testToJSON.cpp
School-projects/year-3/bachelors-thesis/: README.md
School-projects/year-3/mesh-visualiser/: Project_1_3.py  README.md  Renderer.py
School-projects/year-4/sokoban-solver/: README.md
School-projects/year-5/VR_project/: README.md
School-projects/year-5/masters-thesis/: README.md
University-projects/year-1/2p-bomb-game/: nastavenia.txt
University-projects/year-1/mice-puzzle-game/: verzia_1_0.py
University-projects/year-2/associative-array/: ArrayException.h  CMakeLists.txt  Item.h  README.md  ReadJSON.h  WriteJSON.cpp  WriteJSON.h  testItem.cpp
University-projects/year-2/associative-array/test_files/: dict.json  simple_int.json  special_chars.json  text1.txt
University-projects/year-3/Eldritch-Dungeon/: README.md
University-projects/year-3/mesh-visualiser/: Structs.py
University-projects/year-4/realtime-rendering/: README.md
University-projects/year-4/sokoban-solver/: README.md
University-projects/year-5/masters-thesis/: README.md
(+1040 files in other folders)
